[package]
name = "era"
description = "Hydrate a high-level, real-time, read-optimized cache of Cardano on-chain state with Era"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/mkeen/era"
homepage = "https://github.com/mkeen/era"
documentation = "https://docs.rs/era"
license = "Apache-2.0"
readme = "README.md"
authors = ["Mike Keen <mwk@mikekeen.com>"]

# [package.metadata.deb]
# maintainer = "Mike Keen <mwk@mikekeen.com>"
# copyright = "2024 Mike Keen"
# license-file = ["LICENSE", "4"]
# extended-description = """\
# A high-level, real-time blockchain indexer for Cardano and Redis"""
# # depends = "redis-server"
# section = "Developer Tools"
# priority = "optional"
# assets = [
#     ["target/release/era", "usr/bin/", "755"],
#     ["services/era/config.toml", "etc/era/config.toml", "644"],
#     ["services/redis/blocks.conf", "etc/redis/era-blocks.conf", "644"],
#     ["services/redis/state.conf", "etc/redis/era-state.conf", "644"],
#     ["services/era/era.service", "etc/systemd/system/era.service", "644"],
#     ["services/redis/blocks.service", "etc/systemd/system/redis-blocks.service", "644"],
#     ["services/redis/state.service", "etc/systemd/system/redis-state.service", "644"],
#     ["assets/mainnet-byron-genesis.json", "etc/era/mainnet-byron-genesis.json", "644"]
# ]

# [dev-dependencies]
# cargo-deb = "2.11.0"

[dependencies]
pallas = "*"
pallas-bech32 = { git = "https://github.com/txpipe/pallas", package = "pallas-bech32" }
chrono = "*"
hex = "*"
net2 = "*"
#blake2 = "0.10.6"
#bech32 = "0.11.0"
async-trait = "*"
clap = { version = "*", features = ["derive"] }
merge = "*"
config = { version = "*", default-features = false, features = [
    "toml",
    "json",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_cbor = "*"
minicbor = { version = "*", features = ["std"] }
prometheus_exporter = { version = "*", default-features = false }
gasket = { version = "*", features = ["derive"] }
gasket-log = { path = "../gasket-log-rs/gasket-log" }
thiserror = "*"
redis = { version = "*", features = ["tokio-comp"] }
lazy_static = "*"
#tonic = { version = "0.9.2", features = ["tls", "tls-roots"], optional = false }
#utxorpc = { version = "1.0.0-alpha.1" }
sled = { version = "*", features = ["compression"] }
futures = { version = "*", optional = true }
tokio = { version = "*", features = ["full"], optional = true }
tokio-util = "*"
tokio-stream = "*"
crossterm = "*"

# tui feature
indicatif = { version = "*", optional = true }
ratatui = {version = "*", optional = true}

# required for CI to complete successfully
openssl = { version = "*", optional = true, features = ["vendored"] }
crossbeam-queue = "*"

[features]
async = ["futures", "tokio"]
tui = ["indicatif", "ratatui"]
default = ["tui", "async"]
